Add duration field to server run log
